--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/mobs_hostile_mimic.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/mobs_hostile_mimic.yml
@@ -64,6 +64,7 @@
   - type: Speech
     speechVerb: SmallMob
   - type: NonSpreaderZombie
+  - type: Jittering
 
 - type: entity
   id: MobSpawnNFMimic
