Force transfer, max transfer amount to 5u

--- a/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemistry.yml
@@ -455,6 +455,9 @@
     - Syringe
     - Trash
     - SyringeGunAmmo
+  - type: Injector # Frontier
+    maxTransferAmount: 5 # Frontier
+    transferAmount: 5 # Frontier
 
 - type: entity
   parent: BaseSyringe
