--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/rehydrateable.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/rehydrateable.yml
@@ -50,9 +50,4 @@
       right:
       - state: inhand-right
         shader: unshaded
-    animation: WeaponArcBite # Rrrr!
-  - type: Tag
-    tags:
-      - Payload
-      - ClothMade
-      - PlushieCarp
+    animation: WeaponArcBite
