Wreck Cleanup Part 1

--- a/Resources/Maps/_NF/Dungeon/cave_factory.yml
+++ b/Resources/Maps/_NF/Dungeon/cave_factory.yml
@@ -10834,7 +10834,7 @@ entities:
     - type: Transform
       pos: 1.5,48.5
       parent: 1
-- proto: RandomItem
+- proto: SalvageSpawnerTreasure
   entities:
   - uid: 347
     components:
