--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -37,7 +37,7 @@
       offset: 0.2
 
 - type: entity
-  name: Basalt Elemental Spawner
+  name: basalt elemental spawner
   id: BasaltElementalSpawner
   parent: MarkerBase
   suffix: 45
@@ -73,7 +73,7 @@
       offset: 0.2
 
 - type: entity
-  name: Rock Elemental Spawner
+  name: rock elemental spawner
   id: RockElementalSpawner
   parent: MarkerBase
   suffix: 45
@@ -109,7 +109,7 @@
       offset: 0.2
 
 - type: entity
-  name: Sand Elemental Spawner
+  name: sand elemental spawner
   id: SandElementalSpawner
   parent: MarkerBase
   suffix: 45
@@ -145,7 +145,7 @@
       offset: 0.2
 
 - type: entity
-  name: Snow Elemental Spawner
+  name: snow elemental spawner
   id: SnowElementalSpawner
   parent: MarkerBase
   suffix: 45
@@ -181,7 +181,7 @@
       offset: 0.2
 
 - type: entity
-  name: Chromite Elemental Spawner
+  name: chromite elemental spawner
   id: ChromiteElementalSpawner
   parent: MarkerBase
   suffix: 45
@@ -217,7 +217,7 @@
       offset: 0.2
 
 - type: entity
-  name: Asteroid Rock Elemental Spawner
+  name: asteroid rock elemental spawner
   id: AsteroidRockElementalSpawner
   parent: MarkerBase
   suffix: 45
@@ -251,7 +251,7 @@
         - AsteroidRockUraniumCrabNF
 
 - type: entity
-  name: Asteroid Scrap Bot Spawner
+  name: asteroid scrap bot spawner
   id: AsteroidScrapBotSpawner
   parent: MarkerBase
   suffix: 45
@@ -284,7 +284,7 @@
     offset: 0.2
 
 - type: entity
-  name: Asteroid Scrap Bot Rock Spawner
+  name: asteroid scrap bot rock spawner
   id: AsteroidScrapBotWallSpawner
   parent: MarkerBase
   suffix: 45
@@ -326,129 +326,191 @@
     offset: 0.2
 
 - type: entity
-  name: Salvage Tank Spawner
+  name: salvage tank spawner
   id: SalvageTankSpawner
   parent: MarkerBase
   components:
-    - type: Sprite
-      layers:
-        - state: red
-        - sprite: Structures/Storage/tanks.rsi
-          state: fueltank
-    - type: RandomSpawner
-      rarePrototypes:
-        - WeldingFuelTankHighCapacity
-        - WaterTankHighCapacity
-      rareChance: 0.03
-      prototypes:
-        - WaterTankFull
-        - WeldingFuelTankFull
-        - WaterCooler
-      chance: 0.9
-      offset: 0.0
+  - type: Sprite
+    layers:
+    - state: red
+    - sprite: Structures/Storage/tanks.rsi
+      state: fueltank
+  - type: RandomSpawner
+    prototypes:
+    - WaterTankFull
+    - WeldingFuelTankFull
+#    - WaterCooler
+    chance: 0.95
+    rarePrototypes:
+    - WeldingFuelTankHighCapacity
+    - WaterTankHighCapacity
+    rareChance: 0.05
+    offset: 0.0
 
 - type: entity
-  name: Salvage Locker Spawner
+  name: salvage locker spawner
   id: SalvageLockerSpawner
   parent: MarkerBase
   components:
-    - type: Sprite
-      layers:
-        - state: red
-        - sprite: Structures/Storage/closet.rsi
-          state: alien
-    - type: RandomSpawner
-      rarePrototypes:
-        - LockerAtmosphericsFilledHardsuit
-        - LockerAtmosphericsFilled
-        - LockerSalvageSpecialistFilledHardsuit
-        - LockerEngineerFilledHardsuit
-        - NFLockerSecurityFilled
-        - NFClosetBombFilled
-        - LockerBoozeFilled
-        - ClosetChefFilled
-      rareChance: 0.15
-      prototypes:
-        - ClosetL3Filled
-        - LockerSalvageSpecialistFilled
-        - ClosetToolFilled
-        - LockerElectricalSuppliesFilled
-        - LockerWeldingSuppliesFilled
-        - LockerEngineerFilled
-        - ClosetRadiationSuitFilled
-        - LockerMedicineFilled
-        - LockerMedicalFilled
-        - LockerChemistryFilled
-        - LockerParamedicFilled
-        - ClosetEmergencyFilledRandom
-        - ClosetFireFilled
-        - ClosetMaintenanceFilledRandom
-        - LockerScienceFilled
-        - ClosetJanitorFilled
-        - LockerBotanistFilled
-        - WardrobeMixedFilled
-      chance: 0.8
-      offset: 0.0
+  - type: Sprite
+    layers:
+    - state: red
+    - sprite: Structures/Storage/closet.rsi
+      state: alien
+  - type: RandomSpawner
+    prototypes:
+    - ClosetL3Filled
+    - LockerSalvageSpecialistFilled
+    - ClosetToolFilled
+    - LockerElectricalSuppliesFilled
+    - LockerWeldingSuppliesFilled
+    - LockerEngineerFilled
+    - ClosetRadiationSuitFilled
+    - LockerMedicineFilled
+    - LockerMedicalFilled
+    - LockerChemistryFilled
+    - LockerParamedicFilled
+    - ClosetEmergencyFilledRandom
+    - ClosetFireFilled
+    - ClosetMaintenanceFilledRandom
+    - LockerScienceFilled
+    - ClosetJanitorFilled
+    - LockerBotanistFilled
+#    - WardrobeMixedFilled
+    chance: 0.95
+    rarePrototypes:
+    - LockerAtmosphericsFilledHardsuit
+    - LockerAtmosphericsFilled
+    - LockerSalvageSpecialistFilledHardsuit
+    - LockerEngineerFilledHardsuit
+    - NFLockerSecurityFilled
+    - NFClosetBombFilled
+    rareChance: 0.15
+    offset: 0.0
 
 - type: entity
-  name: Salvage Suit Storage Spawner
+  name: salvage random furniture spawner
+  id: SalvageFurnitureSpawner
+  parent: MarkerBase
+  components:
+  - type: Sprite
+    layers:
+    - state: red
+    - sprite: Structures/Storage/suit_storage.rsi
+      state: base
+  - type: RandomSpawner
+    prototypes:
+    - TableFrame
+    - Table
+    - rack
+#    - Dresser
+    - WardrobeMixedFilled
+    - Bookshelf
+    - Bed
+    - SuitStorageSalv
+    - Floodlight
+    - PottedPlantRandomPlastic
+    chance: 0.95
+    rarePrototypes:
+    - MedicalBed
+    - Stool
+    - ChairPilotSeat
+    - ChairOfficeLight
+    - ChairOfficeDark
+    - ComfyChair
+    - ChairWood
+    - ChairFolding
+    rareChance: 0.1
+    offset: 0.0
+
+- type: entity
+  name: salvage suit storage spawner
   id: SalvageSuitStorageSpawner
   parent: MarkerBase
   components:
-    - type: Sprite
-      layers:
-        - state: red
-        - sprite: Structures/Storage/suit_storage.rsi
-          state: base
-    - type: RandomSpawner
-      prototypes:
-        - SuitStorageEVA
-        - SuitStorageEVAAlternate
-        - SuitStorageEVAEmergency
-#        - SuitStorageEVAPrisoner
-#        - SuitStorageEVAPirate
-        - SuitStorageBasic
-        - SuitStorageEngi
-        - SuitStorageAtmos
-        - SuitStorageSalv
-      offset: 0.0
+  - type: Sprite
+    layers:
+    - state: red
+    - sprite: Structures/Storage/suit_storage.rsi
+      state: base
+  - type: RandomSpawner
+    prototypes:
+    - SuitStorageEVA
+    - SuitStorageEVAAlternate
+    - SuitStorageEVAEmergency
+#    - SuitStorageEVAPrisoner
+#    - SuitStorageEVAPirate
+    - SuitStorageBasic
+    - SuitStorageEngi
+    - SuitStorageAtmos
+    - SuitStorageSalv
+    chance: 0.95
+    offset: 0.0
 
 - type: entity
-  name: Salvage Generator Spawner
+  name: salvage generator spawner
   id: SalvageGeneratorSpawner
   parent: MarkerBase
   components:
-    - type: Sprite
-      layers:
-        - state: red
-        - sprite: Structures/Power/Generation/portable_generator.rsi
-          state: portgen0
-    - type: RandomSpawner
-      rarePrototypes:
-        - PortableGeneratorSuperPacman
-        - PortableGeneratorJrPacman
-      rareChance: 0.3
-      prototypes:
-        - PortableGeneratorJrPacman
-      chance: 0.6
-      offset: 0.0
+  - type: Sprite
+    layers:
+    - state: red
+    - sprite: Structures/Power/Generation/portable_generator.rsi
+      state: portgen0
+  - type: RandomSpawner
+    prototypes:
+    - PortableGeneratorJrPacman
+    chance: 0.5
+    rarePrototypes:
+    - PortableGeneratorSuperPacman
+    - PortableGeneratorJrPacman
+    rareChance: 0.3
+    offset: 0.0
 
 - type: entity
-  name: Salvage Handheld Flag Spawner
+  name: salvage handheld flag spawner
   id: SalvageHandheldFlagSpawner
   parent: MarkerBase
   components:
-    - type: Sprite
-      layers:
-        - state: red
-        - sprite: Objects/Misc/Handy_Flags/blank_handy_flag.rsi
-          state: icon
+  - type: Sprite
+    layers:
+    - state: red
+    - sprite: Objects/Misc/Handy_Flags/blank_handy_flag.rsi
+      state: icon
+  - type: RandomSpawner
+    prototypes:
+    - NTHandyFlag
+    - BlankHandyFlag
+    - SyndieHandyFlag
+    - LGBTQHandyFlag
+    - PirateHandyFlag
+    chance: 0.5
+    offset: 0.0
+
+- type: entity
+  id: NFSalvageMobSpawner
+  parent: SalvageMobSpawner
+  suffix: 95
+  components:
     - type: RandomSpawner
       prototypes:
-        - NTHandyFlag
-        - BlankHandyFlag
-        - SyndieHandyFlag
-        - LGBTQHandyFlag
-        - PirateHandyFlag
-      chance: 0.9
+      - MobCarpSalvage
+      - MobCarpSalvage
+      - MobCarpSalvage
+      - MobCarpSalvage
+      - MobCarpSalvage
+#      - MobTickSalvage
+#      - MobTickSalvage
+#      - MobTickSalvage
+      - SpawnMobBearSalvage
+      - SpawnMobSpiderSalvage
+      - SpawnMobKangarooSalvage
+#      - SpawnMobSmallPurpleSnake # Why are they xeno
+      - PlushieCarp
+      - DehydratedSpaceCarp
+      chance: 0.95
+      rarePrototypes:
+      - MobSharkSalvage
+#      - SpawnMobPurpleSnake # Why are they xeno
+      rareChance: 0.2
       offset: 0.0
