--- a/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
@@ -2,7 +2,7 @@
   name: fitz special
   parent: [BaseWeaponRevolver, BaseC1Contraband]
   id: WeaponRevolverFitz
-  description: A compact and concealable self defence snub revolver. Uses .38 special ammo.
+  description: A compact and concealable self defence snub revolver. Uses .45 ammo.
   components:
   - type: Sprite
     sprite: DeltaV/Objects/Weapons/Guns/Revolvers/fitz.rsi
@@ -25,7 +25,7 @@
   name: faith
   parent: [BaseWeaponRevolver, BaseC1Contraband]
   id: WeaponRevolverFaith
-  description: Delivers blessings in bullet form. Uses .38 special ammo.
+  description: Delivers blessings in bullet form. Uses .45 ammo.
   components:
   - type: Sprite
     sprite: DeltaV/Objects/Weapons/Guns/Revolvers/faith.rsi
@@ -48,7 +48,7 @@
   name: lucky 37
   parent: [BaseWeaponRevolver, BaseC1Contraband]
   id: WeaponRevolverLucky
-  description: Luck always beats skill, ya weasel. Uses .38 special ammo.
+  description: Luck always beats skill, ya weasel. Uses .45 ammo.
   components:
   - type: Sprite
     sprite: DeltaV/Objects/Weapons/Guns/Revolvers/lucky.rsi
