--- a/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Pistols/pistols.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Pistols/pistols.yml
@@ -2,7 +2,7 @@
   name: Mk32 "Universal"
   parent: [BaseWeaponPistol, BaseC1Contraband]
   id: WeaponPistolUniversal
-  description: The Mark 32 Offensive Handgun, produced by NanoTrasen's Small Arms Division. Uses .45 magnum ammo. # DeltaV - update Mk32
+  description: The Mark 32 Offensive Handgun, produced by NanoTrasen's Small Arms Division. Uses .35 auto ammo.
   components:
   - type: Sprite
     sprite: DeltaV/Objects/Weapons/Guns/Pistols/universal.rsi
