--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/dungeon_items_weapons.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/dungeon_items_weapons.yml
@@ -59,8 +59,8 @@
     #- WeaponCaseLongShotgunDoubleBarreledExpedition
     - WeaponCaseShortSawnExpedition
     - WeaponCaseLongMosinExpedition
-    - WeaponSniperCeremonial
-    - WeaponRevolverLucky
+    - WeaponCaseShortLucky
+    - WeaponCaseLongSniperCeremonial
     chance: 1.0
     offset: 0.0
     rarePrototypes:
