--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/salvage.yml
@@ -25,14 +25,24 @@
         - CrateEmergencyInternals
 #        - CrateFoodMRE # Frontier
         - CrateMaterialTextiles
-        - CrateMedicalSupplies
-        - CrateEngineeringCableBulk
-        - CrateMaterialCardboard
-        - CrateServiceBooks
-        - CrateServiceSmokeables
-        - CrateTrashCartFilled
-        - ClosetMaintenanceFilledRandom
-        - ClosetEmergencyFilledRandom
+#        - CrateMedicalSupplies # Frontier
+        - CrateEngineeringCableBulk # Frontier
+        - CrateMaterialCardboard # Frontier
+        - CrateServiceBooks # Frontier
+        - CrateServiceSmokeables # Frontier
+        - CrateTrashCartFilled # Frontier
+        - ClosetMaintenanceFilledRandom # Frontier
+        - ClosetEmergencyFilledRandom # Frontier
+        - CrateServiceReplacementLights # Frontier
+        - CrateServiceBureaucracy # Frontier
+        - CrateMaterialPlasteel # Frontier
+        - CrateFunArtSupplies # Frontier
+        - CrateEmergencyFire # Frontier
+        - CrateEmergencyInflatablewall # Frontier
+        - CrateHydroponicsTools # Frontier
+        - CrateHydroponicsSeeds # Frontier
+        - CrateMaterialPlasma # Frontier
+        - CrateHydroponicsSeedsExotic # Frontier
       rareChance: 0.4
       prototypes:
         - CrateSalvageAssortedGoodies
