Rename toy RPG to "toy RPG"

--- a/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Fun/toys.yml
@@ -533,7 +533,7 @@
     state: white
 
 - type: entity
-  name: emotional support RPG
+  name: toy RPG
   parent: [BaseClearContraband, WeaponLauncherRocket]
   id: WeaponLauncherRocketToy
   suffix: Toy
