--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/salvage.yml
@@ -43,7 +43,7 @@
         - CrateHydroponicsSeedsExotic # Frontier
       rareChance: 0.4
       prototypes:
-        - CrateSalvageAssortedGoodies
+        - NFCrateSalvageAssortedGoodies # Frontier: use NF variant
       chance: 0.9
       offset: 0.0
 
