--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -274,12 +274,12 @@
       color: "#990000"
   - type: RandomSpawner
     rarePrototypes:
-    - MobRogueSiliconScrapThrustersRangedAsteroid
-    rareChance: 0.1
+    - MobSpawnScrapbotLaser #MobRogueSiliconScrapThrustersRangedAsteroid
+    rareChance: 0.05
     prototypes:
-    - MobRogueSiliconScrapAsteroid
-    - MobRogueSiliconScrapThreadsAsteroid
-    - MobRogueSiliconScrapThrustersAsteroid
+    - MobSpawnScrapbot #MobRogueSiliconScrapAsteroid
+    - MobSpawnScrapbotThreads #MobRogueSiliconScrapThreadsAsteroid
+    - MobSpawnScrapbotThrusters #MobRogueSiliconScrapThrustersAsteroid
     chance: 0.45
     offset: 0.2
 
