--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -274,7 +274,7 @@
       color: "#990000"
   - type: RandomSpawner
     rarePrototypes:
-    - MobSpawnScrapbotLaser #MobRogueSiliconScrapThrustersRangedAsteroid
+    - MobSpawnScrapbotLaser
     rareChance: 0.05
     prototypes:
     - MobSpawnScrapbot #MobRogueSiliconScrapAsteroid
