--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -277,9 +277,9 @@
     - MobSpawnScrapbotLaser
     rareChance: 0.05
     prototypes:
-    - MobSpawnScrapbot #MobRogueSiliconScrapAsteroid
-    - MobSpawnScrapbotThreads #MobRogueSiliconScrapThreadsAsteroid
-    - MobSpawnScrapbotThrusters #MobRogueSiliconScrapThrustersAsteroid
+    - MobSpawnScrapbot
+    - MobSpawnScrapbotThreads
+    - MobSpawnScrapbotThrusters
     chance: 0.45
     offset: 0.2
 
