--- a/Resources/Prototypes/_NF/Entities/Effects/mobspawn.yml
+++ b/Resources/Prototypes/_NF/Entities/Effects/mobspawn.yml
@@ -277,6 +277,7 @@
   parent: MobSpawnCrabNFQuartz
   name: mobspawner scrapbot
   components:
+  - type: Jittering
   - type: Sprite
     sprite: /Textures/_NF/Effects/mobspawn.rsi
     state: scrapbot
@@ -288,6 +289,7 @@
   parent: MobSpawnCrabNFQuartz
   name: mobspawner scrapbot
   components:
+  - type: Jittering
   - type: Sprite
     sprite: /Textures/_NF/Effects/mobspawn.rsi
     state: scrapbot_threads
@@ -299,6 +301,7 @@
   parent: MobSpawnCrabNFQuartz
   name: mobspawner scrapbot
   components:
+  - type: Jittering
   - type: Sprite
     sprite: /Textures/_NF/Effects/mobspawn.rsi
     state: scrapbot_thrusters
@@ -310,6 +313,7 @@
   parent: MobSpawnCrabNFQuartz
   name: mobspawner scrapbot
   components:
+  - type: Jittering
   - type: Sprite
     sprite: /Textures/_NF/Effects/mobspawn.rsi
     state: scrapbot_laser
