--- a/Resources/Prototypes/_NF/Recipes/Reactions/chemicals.yml
+++ b/Resources/Prototypes/_NF/Recipes/Reactions/chemicals.yml
@@ -7,5 +7,9 @@
       amount: 1
     SulfuricAcid:
       amount: 1
+    Carbon:
+      amount: 1
+    Oxygen:
+      amount: 1
   products:
     SalicylicAcid: 3
