--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -532,18 +532,24 @@
     - MobCarpSalvage
     - MobCarpSalvage
     - MobCarpSalvage
-#    - MobTickSalvage
-#    - MobTickSalvage
-#    - MobTickSalvage
     - SpawnMobBearSalvage
     - SpawnMobSpiderSalvage
     - SpawnMobKangarooSalvage
-#    - SpawnMobSmallPurpleSnake # Why are they xeno
     - PlushieCarp
     - DehydratedSpaceCarp
+#    - MobTickSalvage
+#    - MobTickSalvage
+#    - MobTickSalvage
+#    - SpawnMobSmallPurpleSnake # Why are they xeno
     chance: 0.95
     rarePrototypes:
     - MobSharkSalvage
+    - MobSharkSalvage
+    - MobSharkSalvage
+    - MobSharkSalvage
+    - MobSharkSalvage
+    - NFPlushieSharkMinnow
+    - DehydratedSharkMinnow
 #    - SpawnMobPurpleSnake # Why are they xeno
     rareChance: 0.2
     offset: 0.0
