--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -326,6 +326,33 @@
     offset: 0.2
 
 - type: entity
+  name: Salvage Material Crate Spawner
+  id: NFSalvageMaterialCrateSpawner
+  parent: SalvageMaterialCrateSpawner
+  components:
+  - type: RandomSpawner
+    prototypes:
+    - NFCrateSalvageAssortedGoodies # Frontier: use NF variant
+    chance: 0.95
+    rarePrototypes:
+    - CrateSalvageEquipment
+    - CrateServiceJanitorialSupplies
+    - CrateEmergencyInternals
+    - CrateServiceBooks
+    - CrateServiceSmokeables
+    - CrateTrashCartFilled
+    - CrateServiceReplacementLights
+    - CrateServiceBureaucracy
+    - CrateEmergencyFire
+    - CrateEmergencyInflatablewall
+    - CrateHydroponicsTools
+    - CrateHydroponicsSeeds
+    - CrateHydroponicsSeedsMedicinal
+    - CrateHydroponicsSeedsExotic
+    rareChance: 0.1
+    offset: 0.0
+
+- type: entity
   name: salvage tank spawner
   id: SalvageTankSpawner
   parent: MarkerBase
