--- a/Resources/IgnoredPrototypes/ignoredPrototypes.yml
+++ b/Resources/IgnoredPrototypes/ignoredPrototypes.yml
@@ -7,5 +7,5 @@
 # - /Prototypes/Guidebook
 # - /Prototypes/Catalog/uplink_catalog.yml
  - /Prototypes/GameRules/events.yml # Frontier - Fuck this file
- - /Prototypes/Procedural/Themes/vgroidinterior.yml
+ - /Prototypes/Procedural/Themes
  - /Prototypes/Procedural/vgroid.yml
