--- a/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
+++ b/Resources/Prototypes/_NF/Entities/Markers/Spawners/Random/salvage.yml
@@ -332,13 +332,13 @@
   components:
   - type: RandomSpawner
     prototypes:
-    - NFCrateSalvageAssortedGoodies # Frontier: use NF variant
+    - NFCrateSalvageAssortedGoodies
+    - NFCrateSalvageAssortedGoodiesPlastic
     chance: 0.95
     rarePrototypes:
     - CrateSalvageEquipment
     - CrateServiceJanitorialSupplies
     - CrateEmergencyInternals
-    - CrateServiceBooks
     - CrateServiceSmokeables
     - CrateTrashCartFilled
     - CrateServiceReplacementLights
