WIP: science revalue, no tech disks & anom sync

--- a/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
@@ -63,7 +63,7 @@
   - type: TechnologyDisk
     tierWeightPrototype: TechDiskTierWeights # Frontier
   - type: StaticPrice
-    price: 5000 # Frontier - Rebalance
+    price: 0.01 # Frontier - research points are a means to an end, not an end of their own
   - type: PirateBountyItem # Frontier
     id: TechnologyDisk # Frontier
 
