--- a/Resources/Prototypes/Research/experimental.yml
+++ b/Resources/Prototypes/Research/experimental.yml
@@ -45,17 +45,19 @@
   - AnalysisComputerCircuitboard
   - ArtifactAnalyzerMachineCircuitboard
 
-- type: technology
-  id: AlternativeResearch
-  name: research-technology-alternative-research
-  icon:
-    sprite: Structures/Machines/tech_disk_printer.rsi
-    state: display
-  discipline: Experimental
-  tier: 1
-  cost: 5000
-  recipeUnlocks:
-  - TechDiskComputerCircuitboard
+# Frontier: no tech disks
+# - type: technology
+#   id: AlternativeResearch
+#   name: research-technology-alternative-research
+#   icon:
+#     sprite: Structures/Machines/tech_disk_printer.rsi
+#     state: display
+#   discipline: Experimental
+#   tier: 1
+#   cost: 5000
+#   recipeUnlocks:
+#   - TechDiskComputerCircuitboard
+# End Frontier: no tech disks
 
 - type: technology
   id: MagnetsTech
@@ -121,7 +123,7 @@
   cost: 10000
   recipeUnlocks:
   - WeaponPistolCHIMP
-  - AnomalySynchronizerCircuitboard
+  # - AnomalySynchronizerCircuitboard # Frontier: doesn't make sense for Frontier
   - AnomalyVesselExperimentalCircuitboard
   technologyPrerequisites:
   - BasicAnomalousResearch
