comments, $200 for a 1k pt research disk

--- a/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
@@ -11,6 +11,8 @@
   - type: GuideHelp
     guides:
     - Science
+  - type: StaticPrice # Frontier
+    price: 200 # Frontier - To be fair, its worth half a tech disk, but we still require tech to print it so its lower.
 
 - type: entity
   parent: ResearchDisk
