--- a/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
@@ -12,7 +12,7 @@
     guides:
     - Science
   - type: StaticPrice # Frontier
-    price: 200 # Frontier - To be fair, its worth half a tech disk, but we still require tech to print it so its lower.
+    price: 200 # Frontier
 
 - type: entity
   parent: ResearchDisk
@@ -23,7 +23,7 @@
   - type: ResearchDisk
     points: 5000
   - type: StaticPrice # Frontier
-    price: 1000 # Frontier - To be fair, its worth half a tech disk, but we still require tech to print it so its lower.
+    price: 1000 # Frontier
 
 - type: entity
   parent: ResearchDisk
@@ -34,7 +34,7 @@
   - type: ResearchDisk
     points: 10000
   - type: StaticPrice # Frontier
-    price: 2000 # Frontier - To be fair, its worth a tech disk, but we still require tech to print it so its lower.
+    price: 2000 # Frontier
 
 - type: entity
   parent: ResearchDisk
