tech disk value comment

--- a/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Research/disk.yml
@@ -65,7 +65,7 @@
   - type: TechnologyDisk
     tierWeightPrototype: TechDiskTierWeights # Frontier
   - type: StaticPrice
-    price: 0.01 # Frontier - research points are a means to an end, not an end of their own
+    price: 0.01 # Frontier 100<0.01 - research points are a means to an end, not an end of their own
   - type: StealTarget
     stealGroup: TechnologyDisk
   - type: PirateBountyItem # Frontier
