--- a/Resources/Prototypes/Research/experimental.yml
+++ b/Resources/Prototypes/Research/experimental.yml
@@ -128,18 +128,18 @@
   technologyPrerequisites:
   - BasicAnomalousResearch
 
-# - type: technology
-  # id: DeterrenceTechnologies
-  # name: research-technology-deterrence
-  # icon:
-    # sprite: Objects/Weapons/Guns/Battery/particle_decelerator.rsi
-    # state: base
-  # discipline: Experimental
-  # tier: 2
-  # cost: 7500
-  # recipeUnlocks:
-  # - WeaponParticleDecelerator
-  # - HoloprojectorField
+- type: technology
+  id: DeterrenceTechnologies
+  name: research-technology-deterrence
+  icon:
+    sprite: Objects/Devices/Holoprojectors/field.rsi # Frontier particle_decelerator.rsi<field.rsi
+    state: icon # Frontier base<icon
+  discipline: Experimental
+  tier: 2
+  cost: 7500
+  recipeUnlocks:
+  # - WeaponParticleDecelerator # Frontier - Cancer gun that skip walls
+  - HoloprojectorField
 
 # Tier 3
 
