--- a/Resources/Prototypes/_NF/Catalog/Fills/Crates/salvage.yml
+++ b/Resources/Prototypes/_NF/Catalog/Fills/Crates/salvage.yml
@@ -14,18 +14,17 @@
       orGroup: Gas
     - prob: 2.0 # Empty
       orGroup: Gas
-    - id: ResearchDisk
-      prob: 0.1
-      orGroup: RD
+   # - id: ResearchDisk
+    #  prob: 0.1
+    #  orGroup: RD
     - id: ResearchDisk5000
-      prob: 0.02
-      orGroup: RD
-    - id: ResearchDisk10000
       prob: 0.01
       orGroup: RD
     - id: ResearchDisk10000
-      amount: 2
       prob: 0.005
+      orGroup: RD
+    - id: ResearchDisk10000
+      prob: 0.0025
       orGroup: RD
     - prob: 2 # Empty
       orGroup: RD
