Pirates base line

--- a/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/cove.yml
@@ -13,6 +13,7 @@
   name: Pirate Cove
   minimumDistance: 10000
   maximumDistance: 15000
+  spawnGamePreset: NFPirate
   spawnGroup: Required
   gridPath: /Maps/_NF/POI/cove.yml
   hideWarp: true
