--- a/Resources/Prototypes/_NF/game_presets.yml
+++ b/Resources/Prototypes/_NF/game_presets.yml
@@ -1,12 +1,30 @@
 - type: gamePreset
-  id: Adventure
+  id: NFAdventure
   alias:
+    - nfadventure
     - adventure
   name: adventure-title
   description: adventure-description
   showInVote: false
   rules:
-    - Adventure
+    - NFAdventure
+    - BasicStationEventScheduler
+    - BluespaceEventScheduler
+    - BluespaceDungeonEventScheduler
+    - BluespaceSalvageEventScheduler
+    - SmugglingEventScheduler
+    - FrontierRoundstartVariation
+
+- type: gamePreset
+  id: NFPirate
+  alias:
+    - nfpirate
+    - pirate
+  name: adventure-title
+  description: adventure-description
+  showInVote: false
+  rules:
+    - NFAdventure
     - BasicStationEventScheduler
     - BluespaceEventScheduler
     - BluespaceDungeonEventScheduler
