--- a/Resources/Prototypes/_NF/PointsOfInterest/anomalouslab.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/anomalouslab.yml
@@ -13,6 +13,7 @@
   name: 'Anomalous Lab'
   minimumDistance: 2100
   maximumDistance: 3800
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: ScienceLab
   gridPath: /Maps/_NF/POI/anomalouslab.yml
   addComponents:
