--- a/Resources/Prototypes/_NF/PointsOfInterest/bahamamamas.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/bahamamamas.yml
@@ -13,6 +13,7 @@
   name: "Bahama Mama's"
   minimumDistance: 1200
   maximumDistance: 2900
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: RestStop
   gridPath: /Maps/_NF/POI/bahama.yml
   addComponents:
