--- a/Resources/Prototypes/_NF/PointsOfInterest/courthouse.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/courthouse.yml
@@ -13,6 +13,7 @@
   name: "Courthouse"
   minimumDistance: 1150
   maximumDistance: 2050
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: Required
   gridPath: /Maps/_NF/POI/courthouse.yml
   addComponents:
