--- a/Resources/Prototypes/_NF/PointsOfInterest/grifty.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/grifty.yml
@@ -13,6 +13,7 @@
   name: "Grifty's Gas n Grub"
   minimumDistance: 3250
   maximumDistance: 5600
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: Scrapyard
   gridPath: /Maps/_NF/POI/grifty.yml
   addComponents:
