--- a/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lodge.yml
@@ -13,6 +13,7 @@
   name: 'Expeditionary Lodge'
   minimumDistance: 1650
   maximumDistance: 3400
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: Required
   gridPath: /Maps/_NF/POI/lodge.yml
   addComponents:
