--- a/Resources/Prototypes/_NF/PointsOfInterest/nfsd.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/nfsd.yml
@@ -13,6 +13,7 @@
   name: 'NFSD Outpost'
   minimumDistance: 750
   maximumDistance: 1000
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: Required
   gridPath: /Maps/_NF/POI/nfsd.yml
   addComponents:
