--- a/Resources/Prototypes/_NF/PointsOfInterest/northpole.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/northpole.yml
@@ -13,6 +13,7 @@
   name: "The North Pole"
   minimumDistance: 2150
   maximumDistance: 4850
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: Christmas
   spawnChance: 0
   gridPath: /Maps/_NF/POI/northpole.yml
