--- a/Resources/Prototypes/_NF/PointsOfInterest/omnichurch.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/omnichurch.yml
@@ -13,6 +13,7 @@
   name: "Omnichurch Beacon"
   minimumDistance: 2200
   maximumDistance: 4900
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   gridPath: /Maps/_NF/POI/beacon.yml
   addComponents:
   - type: IFF
