--- a/Resources/Prototypes/_NF/PointsOfInterest/thepit.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/thepit.yml
@@ -13,6 +13,7 @@
   name: "The Pit"
   minimumDistance: 2200
   maximumDistance: 4200
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: Arena
   gridPath: /Maps/_NF/POI/arena.yml
   addComponents:
