--- a/Resources/Prototypes/_NF/PointsOfInterest/tinniasrest.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/tinniasrest.yml
@@ -13,6 +13,7 @@
   name: "Tinnia's Rest"
   minimumDistance: 1200
   maximumDistance: 2900
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: RestStop
   gridPath: /Maps/_NF/POI/tinnia.yml
   addComponents:
