--- a/Resources/Prototypes/_NF/PointsOfInterest/trade.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/trade.yml
@@ -13,6 +13,7 @@
   name: Trade Outpost
   minimumDistance: 1500
   maximumDistance: 2500
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: MarketStation
   gridPath: /Maps/_NF/POI/trade.yml
   addComponents:
