--- a/Resources/Prototypes/_NF/PointsOfInterest/caseys.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/caseys.yml
@@ -13,6 +13,7 @@
   name: "Crazy Casey's Casino"
   minimumDistance: 3250
   maximumDistance: 5600
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   gridPath: /Maps/_NF/POI/caseyscasino.yml
   addComponents:
   - type: IFF
