--- a/Resources/Prototypes/_NF/PointsOfInterest/depots.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/depots.yml
@@ -13,6 +13,7 @@
   name: Cargo Depot
   minimumDistance: 4500
   maximumDistance: 6000
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: CargoDepot
   gridPath: /Maps/_NF/POI/cargodepot.yml
   addComponents:
