--- a/Resources/Prototypes/_NF/PointsOfInterest/edison.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/edison.yml
@@ -13,6 +13,7 @@
   # name: 'Edison Power Plant'
   # minimumDistance: 3650
   # maximumDistance: 6400
+  # spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   # spawnGroup: Required
   # gridPath: /Maps/_NF/POI/edison.yml 
   # addComponents:
