--- a/Resources/Prototypes/_NF/PointsOfInterest/lpbravo.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/lpbravo.yml
@@ -13,6 +13,7 @@
   name: 'Listening Point Bravo'
   minimumDistance: 4000
   maximumDistance: 6000
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: SyndicateFOB
   gridPath: /Maps/_NF/POI/lpbravo.yml
   hideWarp: true
