--- a/Resources/Prototypes/_NF/PointsOfInterest/mchobo.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/mchobo.yml
@@ -14,6 +14,7 @@
   name: Derelict McCargo
   minimumDistance: 3250
   maximumDistance: 5600
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: Scrapyard
   gridPath: /Maps/_NF/POI/mchobo.yml
   addComponents:
