--- a/Resources/Prototypes/_NF/PointsOfInterest/trademall.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/trademall.yml
@@ -13,6 +13,7 @@
   name: Trade Mall
   minimumDistance: 1500
   maximumDistance: 2500
+  spawnGamePreset: [ "NFAdventure", "NFPirate" ]
   spawnGroup: MarketStation
   gridPath: /Maps/_NF/POI/trademall.yml
   addComponents:
