--- a/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
@@ -27,6 +27,7 @@
   - type: StaticPrice # Frontier
     price: 5 # Frontier The card need to cost less then the PDA that comes with a card and a pen in it.
   - type: CargoSellBlacklist # Frontier
+  - type: NanoChatCard # DeltaV
 
 #IDs with layers
 
@@ -822,3 +823,5 @@
     - CentralCommand
     - NuclearOperative
     - SyndicateAgent
+  - type: NanoChatCard # DeltaV
+    notificationsMuted: true
